--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -3,6 +3,9 @@ $base-font-size: 16;
 
 // Fonts
 
+$font-libre-franklin : 'Libre Franklin', sans-serif;
+$font-lato: 'Lato', sans-serif;
+
 // Colors
 
 
