--- a/src/views/_layout/_default.pug
+++ b/src/views/_layout/_default.pug
@@ -6,10 +6,11 @@ html
         meta(name='viewport',content='width=device-width, initial-scale=1')
         block head-content
         link(rel='icon',href='favicon.ico',type='image/x-icon')
-        link(rel='stylesheet',href='css/app.css',type='text/css')
+        link(rel='stylesheet',href='css/app.min.css',type='text/css')
     body
         include ../_partials/_header
         block content
         include ../_partials/_footer
-        script(src='scripts/vendor.js')
+        script(src='scripts/vendor.min.js')
+        script(src='scripts/app.min.js')
         block script
